# maid

./: .gitignore  CMakeLists.txt  cmake_install.cmake  id.db  problem.db
src/: base.h  duel.cpp  duel.h  main.cpp
